# hof-videos

./: Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: urls.py  views.py
halls/: admin.py  forms.py  models.py  urls.py  views.py  youtube.py
halls/migrations/: 0001_initial.py  0002_hall_user.py  0003_auto_20200720_1304.py  0004_auto_20200720_1306.py  0005_auto_20200926_0741.py  0006_auto_20200926_0743.py
hofvideo/: settings.py  urls.py  wsgi.py
hofvideo/static/css/: original.css
hofvideo/static/js/: scripts.js
templates/: base.html
templates/halls/: add_video.html  base.html  create_hall.html  dashboard.html  delete_hall.html  delete_video.html  detail_hall.html  index.html  update_hall.html
templates/registration/: login.html  signup.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200929_1348.py
